<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.riturajsingh.muzicapp.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/activityTitleHeader"
            android:padding="8dp"
            android:text="@string/payment_activity_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/activityDescTextViewBackColor"
            android:padding="8dp"
            android:text="@string/payment_activity_desc"
            android:textSize="14sp"
            android:textStyle="italic" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/payment_activity_textview1"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:text="@string/payment_activity_textview2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/payment_home_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/home_button_text" />


    </LinearLayout>
</ScrollView>