<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.riturajsingh.muzicapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activityTitleHeader"
        android:padding="8dp"
        android:text="@string/main_activity_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activityDescTextViewBackColor"
        android:padding="8dp"
        android:text="@string/main_activity_desc"
        android:textSize="14sp"
        android:textStyle="italic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_activity_search_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/search_button_text" />

        <Button
            android:id="@+id/main_activity_store_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/store_button_text" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/miscTitleBackColor"
        android:padding="4dp"
        android:text="@string/main_activity_songs_header"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold|italic" />


    <ListView
        android:id="@+id/main_activity_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>


</LinearLayout>
