<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="4dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/image_content_desc"
        android:src="@drawable/thumbnail" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/store_activity_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="bottom|fill_vertical"
            android:text="@string/song_name_text"
            android:textSize="18sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/store_activity_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|fill_vertical"
            android:text="@string/album_name_text"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/store_activity_buy_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/buy_button_text"
        android:textSize="12sp" />


</LinearLayout>